2006-01-19  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: added some documentation
	* gtksourceview/gtksourcecontextengine.c: (regex_get_pattern): do not
	crash if the regex is unresolved
	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcelanguage-parser-2.c: removed declarations mixed
	with code

2006-01-16  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcelanguage-parser-1.c: (build_keyword_list):
	use "(?i:)" syntax to have case insensitive keywords instead of
	gtk_source_regex_case_insesitive_keyword()
	* configure.in, docs/reference/Makefile.am, gtksourceview/Makefile.am,
	gtksourceview/gnu-regex/*, gtksourceview/gtksourcelanguage-parser-1.c,
	gtksourceview/gtksourcelanguage-parser-2.c,
	gtksourceview/gtksourceregex.c, gtksourceview/gtksourceregex.h,
	gtksourceview/gtksourcetag-private.h: removed GtkSourceRegex and
	gnu-regex

2006-01-15  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcesimpleengine.c: use EggRegex instead of
	gnu-regex

2006-01-11  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: cache the last child of the
	contexts to improve performances (i.e. context_last() is faster),
	fixes bug #323965

2005-10-24  Emanuele Aina <emanuele.aina@tiscali.it>

	* gtksourceview/gtksourcelanguage-parser-2.c: (create_definition),
	(update_regex_flags), (replace_delimiter), (expand_regex),
	(handle_define_regex_element), (element_start): specify the regex
	options as attributes in the language descriptions

2005-07-28  Marco Barisione <barisione@gmail.com>

	* configure.in docs/reference/gtksourceview-docs.sgml
	docs/reference/gtksourceview-sections.txt
	docs/reference/gtksourceview.types docs/reference/lang-reference.sgml
	docs/reference/lang-tutorial.sgml docs/reference/Makefile.am
	docs/reference/tmpl/buffer.sgml docs/reference/tmpl/stylescheme.sgml
	docs/reference/tmpl/tag.sgml gtksourceview/gtksourcebuffer.[ch]