@@ -1,3 +1,9 @@
+2006-01-22  Marco Barisione  <barisione@gmail.com>
+
+	* gtksourceview/gtksourcecontextengine.c: (update_syntax),
+	(verify_parent), (verify_sequence), (verify_tree): if
+	ENABLE_VERIFY_TREE is defined the engine verifies the tree coherency
+
 2006-01-19  Marco Barisione  <barisione@gmail.com>
 
 	* gtksourceview/gtksourcecontextengine.c: added some documentation
